Update shop section styles and add background images for boxes

--- a/Amazon_clone.html
+++ b/Amazon_clone.html
@@ -76,7 +76,7 @@
     <div class="shop-section">
         <div class="box1_box">
             <h2>Health and Persional Care</h2>
-            <div class="box-image"></div>
+            <div class="box-image" style="background-image: url('hero3.jpg');"></div>
             <p>See more</p>
         </div>
         <div class="box2 box">box2</div>
